Changes to all _Layout that may break the overall look for other pages, working on fixing it.

--- a/Lms.Web/wwwroot/css/site.css
+++ b/Lms.Web/wwwroot/css/site.css
@@ -16,39 +16,25 @@ html {
 body {
   margin-bottom: 60px;
 }
-.divider {
-    margin: 2rem;
+.nav-pills {
+    background:grey !important
 }
-.sidenav {
-    color: white;
-    height: 95%;
+.nav-link {
+    color: white !important;
+}
+.navbar {
+    background: linear-gradient(#16637C, #305763) !important;
+    height: 4rem;
+    z-index: 2;
     position: fixed;
-    width: 12rem;
-    z-index: 1;
-    top: 3.7rem;
-    left: 0;
-    background: linear-gradient(#484948, #0E0F0E) !important;
-    overflow-x: hidden;
-    overflow-wrap: break-word;
-    overflow-block: clip;
-    padding-top: 1rem;
-    transition: 0.5s;
-    padding-left: 0;
-    margin-bottom:1rem;
+    width: 100%;
+    border-block: none;
+    margin-bottom: 1rem;
 }
-.mainBody {
-    margin:1rem;
-    margin-left:12rem;
-    width: 600px;
+.logo {
+    height: 60px;
 }
-.btn-dark {
-    background-color: #56433C;
-    width: 98%;
-    font-size: 10px;
-    margin: 1px;
-    margin-right: 1rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -56,7 +42,7 @@ body {
 
 
 ::-webkit-scrollbar-track {
-    background: #0E0F0E;
+    background: #484948;
 }
 
 
